Fix white color on status when selected. Fix cursor:pointer on firefox

--- a/public/ui/sidebar.css
+++ b/public/ui/sidebar.css
@@ -16,6 +16,11 @@ section {
   user-select: none;
 }
 
+/* for Firefox */
+.selectItem * {
+  user-select: none;
+}
+
 .selectItem > * {
   padding: 3px 6px;
 }
